--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue2-vuex",
-  "version": "0.1.0",
+  "name": "Vue-and-Vuex",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -10,6 +10,9 @@
   "dependencies": {
     "axios": "^0.26.1",
     "core-js": "^3.6.5",
+    "primeflex": "^3.1.3",
+    "primeicons": "^5.0.0",
+    "primevue": "^2.9.1",
     "vue": "^2.6.11",
     "vue-jsonld": "^1.0.1",
     "vue-meta": "^2.4.0",
